# ChangeLog for net-dialup/ppp
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.220 2008/07/11 11:50:36 gentoofan23 Exp $

  11 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  ppp-2.4.4-r15.ebuild:
  stable amd64, bug 227183

  28 Jun 2008; Tobias Klausmann <klausman@gentoo.org> ppp-2.4.4-r15.ebuild:
  Stable on alpha, bug #227183

*ppp-2.4.4-r17 (27 Jun 2008)

  27 Jun 2008; Alin Năstac <mrness@gentoo.org> -ppp-2.4.4-r16.ebuild,
  +ppp-2.4.4-r17.ebuild:
  Re-add script directory to ppp-2.4.4-gentoo tarball and make sure it never
  happens again (#229757). Fix passwordfd-read-early patch (#229773).

*ppp-2.4.4-r16 (25 Jun 2008)

  25 Jun 2008; Alin Năstac <mrness@gentoo.org> +ppp-2.4.4-r16.ebuild:
  Patch passwordfd plugin to read password as soon as it gets the fd number -
  openrc use stdin for that, fd that could be closed by pppd before plugin
  reads the password (#209294).

  21 Jun 2008; Markus Rothe <corsair@gentoo.org> ppp-2.4.4-r15.ebuild:
  Stable on ppc64; bug #227183

  21 Jun 2008; Raúl Porcel <armin76@gentoo.org> ppp-2.4.4-r15.ebuild:
  ia64/sparc stable wrt #227183

  19 Jun 2008; Christian Faulhammer <opfer@gentoo.org> ppp-2.4.4-r15.ebuild:
  stable x86, bug 227183

  17 Jun 2008; Jeroen Roovers <jer@gentoo.org> ppp-2.4.4-r15.ebuild:
  Stable for HPPA (bug #227183).

  14 Jun 2008; Zac Medico <zmedico@gentoo.org> ppp-2.4.4-r14.ebuild,
  ppp-2.4.4-r15.ebuild:
  Bug #226505 - For compatibility with phase execution order in
  >=portage-2.1.5, call has_version inside pkg_preinst instead of
  pkg_postinst.

  14 May 2008; Diego Pettenò <flameeyes@gentoo.org> ppp-2.4.4-r15.ebuild:
  Depend on virtual/pam as the code builds fine with OpenPAM.

*ppp-2.4.4-r15 (12 Apr 2008)

  12 Apr 2008; Alin Năstac <mrness@gentoo.org> +ppp-2.4.4-r15.ebuild:
  Re-write kill-pg.patch (#181145 and #216183). Fix LCP timeout error