@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/ppp
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.220 2008/07/11 11:50:36 gentoofan23 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.221 2008/07/15 16:19:27 mrness Exp $
+
+  15 Jul 2008; Alin Năstac <mrness@gentoo.org> ppp-2.4.4-r15.ebuild,
+  ppp-2.4.4-r17.ebuild:
+  Move ppp-gentoo tarballs back to distfiles-local (#231842).
 
   11 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
   ppp-2.4.4-r15.ebuild:
